add: ClientContext